<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nz.ac.cornell.student_attendance.Login">

    <TextView
        android:id="@+id/welcomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="52dp"
        android:text="@string/welcomeLabel"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="58dp"
        android:text="Tutor ID"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/loginInput"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLabel" />

    <EditText
        android:id="@+id/loginInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="47dp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLabel"
        android:layout_marginRight="44dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/pwLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="41dp"
        android:text="@string/simplePw"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/loginLabel" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/loginInput"
        android:layout_marginRight="44dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="163dp"
        android:layout_height="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="71dp"
        android:background="@android:color/holo_red_light"
        android:onClick="login"
        android:text="@string/simpleLogin"
        android:textColor="@android:color/background_light"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />


</android.support.constraint.ConstraintLayout>
