<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nz.ac.cornell.student_attendance.Home">

    <TextView
        android:id="@+id/homeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/homePage"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/nameLabel"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/infoLabel" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="217dp"
        android:layout_marginRight="217dp"
        android:text="John Doe"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/nameLabel"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/infoLabel" />

    <Button
        android:id="@+id/attendanceBtn"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="markAttendance"
        android:text="@string/attLabel"
        android:textColor="@android:color/background_light"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/infoLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:text="My details:"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeLabel" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="84dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="11dp"
        android:text="Tutor id:"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Full-time"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        android:layout_marginLeft="7dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="11dp"
        android:text="List of subjects:"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="327dp"
        android:layout_height="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

    </TableLayout>

    <Button
        android:id="@+id/showStudentsBtn"
        android:layout_width="139dp"
        android:layout_height="52dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="51dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="goToStudenstList"
        android:text="Show students"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attendanceBtn" />

    <Button
        android:id="@+id/showClassesBtn"
        android:layout_width="138dp"
        android:layout_height="49dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="51dp"
        android:background="@android:color/holo_green_light"
        android:onClick="goToClassesList"
        android:text="show classes"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintLeft_toRightOf="@+id/showStudentsBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attendanceBtn"
        tools:layout_editor_absoluteX="209dp" />

</android.support.constraint.ConstraintLayout>
